--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -11,7 +11,14 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_main"
-    tools:context="teste.eder.sunshine.climatempo.MainActivity">
+    tools:context="teste.eder.sunshine.climatempo.MainActivity"
+    android:weightSum="1">
+
+    <EditText
+        android:id="@+id/stCampo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.09" />
 
     <TextView android:id="@+id/textClima"
         android:layout_width="wrap_content"
